* switch all artifact queries to version-pinned (auto-upgrade) * TODO: JIPipeDesktopProjectOverviewUI upgrade tool disabled